MainMethodTestCases/src/com/example/valid/Main1.java
package com.example.valid;

public class Main1 {

	/**
	 * Valid.
	 * 
	 * This is the most common form of the main method. 
	 * 
	 * Source: https://rationalpi.wordpress.com/2007/01/29/main-methods-in-java/
	 */
	public static void main(String[] args) {
		System.out.println("Main1!");
	}

}
